Kubernetes/prod/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-mfusion-ms-deployment
  namespace: prod
  labels:
    app: mfusion-ms
    env: prod
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: mfusion-ms
      env: prod
  template:
    metadata:
      labels:
        app: mfusion-ms
        env: prod
    spec:
      serviceAccountName: prod-mfusion-ms-sa
      containers:
        - name: mfusion-ms
          image: 879381286690.dkr.ecr.ap-south-2.amazonaws.com/mfusion-ms:latest
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 500m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: prod-mfusion-ms-application-config
